# ContextStitch

./: .gitignore  LICENSE  README.md  pyproject.toml
src/contextstitch/: __init__.py  cli.py  stitcher.py
tests/: test_basic.py
